--- a/src/main/resources/assets/packz/lang/en_us.json
+++ b/src/main/resources/assets/packz/lang/en_us.json
@@ -13,13 +13,13 @@
   "item.packz.shootmdown_armor_leggings": "Shootmdown Leggings",
   "item.packz.shootm_down_pickaxe": "ShootmDown Pickaxe",
   "entity.packz.dummyentity": "My buddy",
-  "gamerule.allowShootm.description": "_",
-  "gamerule.allowShootm": "AllowShootmPack",
   "item.packz.shootm_down_hoe": "ShootmDown Hoe",
   "item.packz.shootmdown_armor_helmet": "Shootmdown Helmet",
   "item.packz.dummyentity_spawn_egg": "My buddy Spawn Egg",
   "block.packz.shootm_iron_stairs": "Shootm Iron Stairs",
   "item.packz.usm": "USM",
+  "item.packz.admindim": "Admin Portal Igniter",
+  "block.packz.admin_portal_block": "APB",
   "item.packz.tempitem_1": "TEMPITEM 1",
   "block.packz.shootm_iron_log": "Shootm Iron Shaved",
   "item.packz.uny_ammo": "Uny Ammo",
